Ensure mensurations are visible (fill: black)

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ svg {
     fill: gray;
     font-size: 1.4em;
 }
+.mensuration {
+  stroke: red;
+  fill: black;
+}
 path.domain {
     display: none;
 }
